Modify home screen to list posts by date and title

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,25 +2,18 @@
 layout: default
 ---
 
-<div class="catalogue">
-  {% for post in site.posts %}
-    {% if post.sticky %}
-      {% include catalogue_item.html sticky='true' %}
-    {% endif %}
-  {% endfor %}
-
+<div style="margin: 40px 0">
   {% for post in paginator.posts %}
-    {% include catalogue_item.html %}
+  <a class="home-post" href="{{ post.url | prepend: site.baseurl }}">
+    <span class="home-post-meta">
+      <time datetime="{{ post.date }}">
+        {{ post.date | date:"%Y-%m-%d" }}
+      </time>
+    </span>
+    <div>
+      <span class="home-post-title">{{ post.title }}</span>
+      <div class="home-post-line"></div>
+    </div>
+  </a>
   {% endfor %}
-</div>
-
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="left arrow">&#8592;</a>
-  {% endif %}
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="right arrow">&#8594;</a>
-  {% endif %}
-
-  <span>{{ paginator.page }}</span>
 </div>
