Add all previous posts

--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -17,15 +17,17 @@
         <i class="bi bi-tags-fill"></i>
         <h2 class="tags-item-label">{{ tag[0] }}</h2>
         {% for post in tag[1] %}
-          <a class="tags-post" href="{{ post.url | prepend: site.baseurl }}">
-            <div>
-              <span class="tags-post-title">{{ post.title }}</span>
-              <div class="tags-post-line"></div>
-            </div>
-            <span class="tags-post-meta">
-              <time datetime="{{ post.date }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-            </span>
-          </a>
+          {% if post.language == page.language %}
+            <a class="tags-post" href="{{ post.url | prepend: site.baseurl }}">
+              <div>
+                <span class="tags-post-title">{{ post.title }}</span>
+                <div class="tags-post-line"></div>
+              </div>
+              <span class="tags-post-meta">
+                <time datetime="{{ post.date }}">{{ post.date | date:"%Y-%m-%d" }}</time>
+              </span>
+            </a>
+          {% endif %}
         {% endfor %}
       </div>
     {% endif %} 
